# madmail

./: .dockerignore  .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  maddy.conf  package-lock.json  package.json
.github/: releaserc.ci.json
.github/workflows/: build-android.yml  ci.yml
assets/: madmail.conf.docker
crates/chatmail/: Cargo.toml
crates/chatmail-acme/: Cargo.toml
crates/chatmail-acme/src/: acme_common.rs  http01.rs  lib.rs  obtain.rs  obtain_ip.rs  self_signed.rs  status.rs
crates/chatmail-admin/: Cargo.toml
crates/chatmail-admin-web/: build.rs
crates/chatmail-admin-web/src/: lib.rs  serve.rs
crates/chatmail-admin/src/: auth.rs  cors.rs  handler.rs  router.rs  tests.rs
crates/chatmail-admin/src/resources/: accounts.rs  blocklist.rs  dns.rs  exchangers.rs  federation.rs  message_size.rs  mod.rs  notice.rs  proxy.rs  push.rs  queue.rs  quota.rs  settings.rs  status_storage.rs  toggles.rs  tokens.rs
crates/chatmail-auth/src/: hash.rs  jit.rs  validate.rs
crates/chatmail-config/src/: autoconfig.rs  cli.rs  client_mail.rs  config_autocert.rs  config_www.rs  credential_policy.rs  data_size.rs  db_path.rs  install_cli.rs  lib.rs  maddy.rs  madmail_lexer.rs  parse.rs  queue.rs
crates/chatmail-db/src/: account_info.rs  blocklist.rs  endpoint_cache.rs  federation_policy.rs  inbound.rs  lib.rs  mail_ports.rs  maintenance.rs  modseq.rs  passwords.rs  pool.rs  quota_defaults.rs  registration_tokens.rs  schema.rs  settings.rs  settings_keys.rs  sharing.rs
crates/chatmail-delivery/src/: router.rs  transport.rs
crates/chatmail-fed/src/: mxdeliv.rs  server.rs
crates/chatmail-imap/: Cargo.toml
crates/chatmail-imap/src/: lib.rs  server.rs  session.rs
crates/chatmail-iroh/: build.rs
crates/chatmail-iroh/src/: runner.rs
crates/chatmail-metrics/src/: lib.rs  metrics.rs  server.rs
crates/chatmail-metrics/tests/: http_integration.rs
crates/chatmail-pgp/src/: lib.rs
crates/chatmail-push/: Cargo.toml
crates/chatmail-push/src/: enabled.rs  lib.rs  mode.rs  notifier.rs  stats.rs  store.rs
crates/chatmail-shadowsocks/src/: runtime.rs  server.rs  urls.rs  xray.rs
crates/chatmail-smtp/src/: data_limit.rs  protocol.rs  server.rs  session.rs
crates/chatmail-state/src/: auth.rs  events.rs  flusher.rs  lib.rs  listener_ports.rs  message_size.rs  policy.rs  quota.rs  silent_dismiss.rs  tracker.rs
crates/chatmail-storage/: Cargo.toml
crates/chatmail-storage/src/: blob.rs  cas.rs  delivery_batch.rs  external_store.rs  fsync_batch.rs  inbox.rs  lib.rs  maildir.rs  maildir_cache.rs  maildir_message.rs  purge.rs  storage_policy.rs  uidlist.rs
crates/chatmail-tasks/: Cargo.toml
crates/chatmail-tasks/src/: cert_renew.rs  config.rs  jobs.rs  lib.rs  scheduler.rs
crates/chatmail-tls/src/: lib.rs
crates/chatmail-turn/src/: credentials.rs  lib.rs  parse.rs  turn_client.rs
crates/chatmail-turn/tests/: dual_allocate.rs  realm_auth.rs  relay_external_ip.rs  rfc8656_relay_datapath.rs  smoke_allocate.rs  smoke_stun.rs
crates/chatmail-types/src/: error.rs
crates/chatmail-www/: build.rs
crates/chatmail-www/src/: context_cache.rs  handlers.rs  lib.rs  router.rs  template.rs  tests.rs  webimap.rs  webimap_ws.rs  www_facts.rs
crates/chatmail-www/www-src/: translations.js
crates/chatmail/src/: admin.rs  boot.rs  iroh_boot.rs  lib.rs  logging.rs  main.rs  profiling.rs  push_boot.rs  servers.rs  ss_boot.rs  supervisor.rs  turn_boot.rs  upgrade.rs
crates/chatmail/src/ctl/: account_ops.rs  accounts.rs  admin_token.rs  admin_url.rs  admin_web.rs  blocklist_cmd.rs  certificate.rs  delete_cmd.rs  dispatch.rs  dispatch_tests.rs  docs.rs  endpoint_cache.rs  federation.rs  html.rs  language.rs  message_size.rs  mod.rs  ops_tests.rs  output.rs  port.rs  push.rs  registration.rs  registration_tokens.rs  reload.rs  request_reload.rs  service_toggle.rs  sharing.rs  status_cmd.rs  tasks.rs  uninstall.rs  version.rs
crates/chatmail/src/ctl/install/: config.rs  mod.rs  system.rs  systemd.rs
crates/chatmail/src/supervisor/: cert_renew.rs
crates/chatmail/tests/: boot_test.rs
docs/: context-references.md  how-we-built-it.md  index.md  what-is-missing.md
docs/TDD/: 00-intro.md  01-architecture.md  02-smtp-server.md  03-imap-server.md  04-storage-layer.md  05-authentication.md  07-federation.md  09-admin-api.md  10-webimap.md  11-proxy-services.md  13-configuration.md  14-cli-tools.md  16-testing.md  17-data-models.md  19-certificates.md  21-scheduled-maintenance.md  22-bandwidth-monitoring.md  23-push-notifications.md  CONTEXT.md  README.md
docs/TDD/RFC/: README.md
docs/code/: README.md  accounts-auth.md  architecture.md  build-context-connectivity.sh  build-context.sh  chatmail.md  connectivity-updating.md  goroutines.md  http-surfaces.md  message-checks-pipeline.md  message-incoming.md  message-outgoing.md  modules.md  overview.md  performance.md  pgp-verification.md  runtime.md  startup-and-config.md
docs/guide/: docker.md  install.md
docs/guide/cli/: README.md  accounts-ban-list.md  accounts-ban.md  accounts-create-random.md  accounts-create.md  accounts.md  (+122 more)
docs/man/: README.md  madmail.1  madmail.1.scd
docs/project/: 01-introduction.md  02-getting-the-code.md  03-high-level-architecture.md  08-smtp-imap-servers.md  09-federation-inbound-outbound.md  10-web-services-and-admin.md  11-proxy-services-turn-iroh-ss.md  13-build-test-deploy.md  14-understanding-context-and-references.md  15-development-workflow.md  17-extend-and-contribute.md  README.md
docs/prompts/: planing-prompt.md  planing-system-prompt.md
framework/buffer/: file.go  spill.go  spill_test.go
framework/module/: msgmetadata.go
internal/confutil/: migrate_submission_pgp.go  migrate_submission_pgp_test.go
internal/pgp_verify/: bench_test.go  measure_test.go  metrics.go  pgp_verify.go  pgp_verify_test.go  policy.go  policy_test.go
landing/: .gitignore
tests/: Cargo.toml  ctl_cli_e2e.rs  ctl_ops_e2e.rs  imap_e2e.rs  lib.rs  memory_leak_probe.rs  openmetrics_e2e.rs  securejoin_e2e.rs  turn_e2e.rs
tests/support/: imap_client.rs  mod.rs  p2p.rs
(+38 files in other folders)
