[workspace]
resolver = "2"
members = [
    "crates/chatmail-admin",
    "crates/chatmail-admin-web",
    "crates/chatmail-www",
    "crates/chatmail",
    "crates/chatmail-auth",
    "crates/chatmail-config",
    "crates/chatmail-db",
    "crates/chatmail-delivery",
    "crates/chatmail-fed",
    "crates/chatmail-imap",
    "crates/chatmail-pgp",
    "crates/chatmail-smtp",
    "crates/chatmail-state",
    "crates/chatmail-storage",
    "crates/chatmail-types",
    "crates/chatmail-tls",
    "crates/chatmail-acme",
    "crates/chatmail-turn",
    "crates/chatmail-iroh",
    "crates/chatmail-shadowsocks",
    "crates/chatmail-metrics",
    "crates/chatmail-tasks",
    "tests",
]

[workspace.package]
version = "2.2.1"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.75"

[workspace.dependencies]
chatmail-admin = { path = "crates/chatmail-admin" }
chatmail-admin-web = { path = "crates/chatmail-admin-web" }
chatmail-www = { path = "crates/chatmail-www" }
chatmail-auth = { path = "crates/chatmail-auth" }
chatmail-config = { path = "crates/chatmail-config" }
chatmail-db = { path = "crates/chatmail-db" }
chatmail-delivery = { path = "crates/chatmail-delivery" }
chatmail-fed = { path = "crates/chatmail-fed" }
chatmail-imap = { path = "crates/chatmail-imap" }
chatmail-pgp = { path = "crates/chatmail-pgp" }
chatmail-smtp = { path = "crates/chatmail-smtp" }
chatmail-state = { path = "crates/chatmail-state" }
chatmail-storage = { path = "crates/chatmail-storage" }
chatmail-types = { path = "crates/chatmail-types" }
chatmail-acme = { path = "crates/chatmail-acme" }
chatmail-tls = { path = "crates/chatmail-tls" }
chatmail-turn = { path = "crates/chatmail-turn" }
chatmail-iroh = { path = "crates/chatmail-iroh" }
chatmail-shadowsocks = { path = "crates/chatmail-shadowsocks" }
chatmail-metrics = { path = "crates/chatmail-metrics" }
chatmail-tasks = { path = "crates/chatmail-tasks" }
prometheus = "0.14"
axum = { version = "0.8", features = ["ws"] }
mail-parser = "0.11"
dashmap = "6"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "migrate",
    "macros",
    "any",
] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
async-trait = "0.1"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
sd-notify = "0.4"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tower = "0.5"
