[package]
name = "chatmail-push"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chatmail-db = { workspace = true }
chatmail-types = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "fs"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"